@@ -4,7 +4,7 @@ aclocal -I m4
 libtoolize --copy --force
 autoconf
 autoheader
-automake -a
+automake -a -c
 
 ./configure --prefix=${DIFXROOT}
 
